# BB-Pipeline

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  doc.md  launch.sh  prompt.txt
.github/workflows/: ci.yml  codeql.yml
configs/: defaults.yaml  h_auth.txt  h_headers.txt  scoring.yaml
data/: scope.csv  scope.example.csv  scope_report.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  config_override_system.md  delta_compression.md  dry_run_system.md  kill_switch.md  pipeline_engine.md  progress_monitor.md  query_engine.md  resource_monitor.md  resume_system.md  stage_selector.md
examples/: config_manager_example.cpp  logger_example.cpp  rate_limiter_example.cpp
include/csv/: batch_writer.hpp  delta_compression.hpp  merger_engine.hpp  query_engine.hpp  schema_validator.hpp  streaming_parser.hpp
include/infrastructure/cli/: config_override.hpp
include/infrastructure/networking/: cache_system.hpp  rate_limiter.hpp
include/infrastructure/system/: error_recovery.hpp  memory_manager.hpp  signal_handler.hpp
include/orchestrator/: dry_run_system.hpp  kill_switch.hpp  pipeline_engine.hpp  progress_monitor.hpp  resource_monitor.hpp  resume_system.hpp  stage_selector.hpp
include/types/: scopeEntry.hpp
schemas/: 01_subdomains.schema.csv  02_probe.schema.csv  03_headless.schema.csv  04_discovery.schema.csv  05_jsintel.schema.csv  06_api_catalog.schema.csv  07_api_findings.schema.csv  08_mobile_intel.schema.csv  09_changes.schema.csv  99_final_ranked.schema.csv
scripts/: convert_scope.sh  debug_tools.sh  download_js.sh  enum.sh  gau_wayback.sh  setup_dev.sh
src/: main.cpp
src/bbpctl/: main.cpp
src/core/: cache.cpp  cache_system.cpp  config.cpp  config_manager.cpp  csv.cpp  fingerprints.cpp  http.cpp  logger.cpp  rate_limit.cpp  rate_limiter.cpp  scope.cpp  soft404.cpp  thread_pool.cpp  tls.cpp  util.cpp
src/csv/: batch_writer.cpp  delta_compression.cpp  merger_engine.cpp  query_engine.cpp  schema_validator.cpp  streaming_parser.cpp
src/http/: httpClient.cpp
src/include/core/: config_manager.hpp  logger.hpp  thread_pool.hpp
src/include/http/: httpClient.hpp
src/include/types/: scope.hpp  scopeEntry.hpp
src/infrastructure/cli/: config_override.cpp
src/infrastructure/config/: config_manager.cpp
src/infrastructure/logging/: logger.cpp
src/infrastructure/networking/: cache_system.cpp  rate_limiter.cpp
src/infrastructure/system/: error_recovery.cpp  memory_manager.cpp  signal_handler.cpp
src/infrastructure/threading/: thread_pool.cpp
src/orchestrator/: dry_run_system.cpp  kill_switch.cpp  pipeline_dependency_resolver.cpp  pipeline_engine.cpp  pipeline_engine_complex.cpp  pipeline_execution_context.cpp  pipeline_task.cpp  pipeline_utils.cpp  progress_monitor.cpp  resource_monitor.cpp  resume_system.cpp  stage_selector.cpp
src/types/: scope.cpp  scopeEntry.cpp
tests/: CMakeLists.txt  run_all_tests.sh  test_batch_writer.cpp  test_cache_system  test_cache_system.cpp  test_config_manager  test_config_manager.cpp  test_config_override.cpp  test_config_override_simple.cpp  test_config_simple  test_config_simple.cpp  test_config_validation.sh  test_csv_schemas.sh  test_delta_compression.cpp  test_dry_run_system.cpp  test_error_recovery.cpp  test_error_recovery_simple.cpp  test_httpClient  test_httpClient.cpp  test_kill_switch.cpp  test_kill_switch_simple.cpp  test_logger  test_logger.cpp  test_memory_manager.cpp  test_memory_manager_simple.cpp  test_merger_engine.cpp  test_merger_engine_simple.cpp  test_pipeline_engine.cpp  test_progress_monitor.cpp  test_query_engine.cpp  test_rate_limiter  test_rate_limiter.cpp  test_resource_monitor.cpp  test_resume_system.cpp  test_schema_validator.cpp  test_scope  test_scope.cpp  test_scopeEntry  test_scopeEntry.cpp  test_scripts.sh  (+11 more)
tests/data/: test_js_urls.txt  test_scope.csv
wordlists/: extensions.txt  paths.txt  secrets.patterns  subs.txt
